// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with a single expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    £2.75
  </h2>
</div>
`;

exports[`should render ExpenseSummary correctly with muliple expenses 1`] = `
<div>
  <h2>
    Viewing 
    9
     
    expenses
     totalling 
    £215.78
  </h2>
</div>
`;

exports[`should render ExpenseSummary correctly with no expenses 1`] = `
<div>
  <h2>
    Viewing 
    0
     
    expenses
     totalling 
    £0.00
  </h2>
</div>
`;
